# El0ps

./: .coveragerc  .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: codecov.yml  coverage.yml  documentation.yaml  lint.yml  test.yml
doc/source/: api.rst  conf.py  contribute.rst  custom.rst  getting_started.rst  index.rst  ingredients.rst  news.rst
doc/source/api/: compilation.rst  estimator.rst  path.rst  (+1 more)
docs/source/: api.rst  conf.py  custom.rst  examples.rst  getting_started.rst  index.rst  sklearn.rst  user_guide.rst
doctrees/: api.doctree  contribute.doctree  custom.doctree  environment.pickle  getting_started.doctree  index.doctree  ingredients.doctree  news.doctree
doctrees/api/: api.doctree  compilation.doctree  datafit.doctree  estimator.doctree  path.doctree  penalty.doctree  solver.doctree  utils.doctree
doctrees/examples/: custom-datafit.doctree  custom-estimator.doctree  custom-penalty.doctree  examples.doctree
examples/: icml.py  simple.py
experiments/: .gitignore  README.md  __init__.py  base.py  experiment.py  graphic.py  graphics.py  instance.py  instances.py  oar.py  onerun.py  run.py  solver.py  solvers.py
experiments/atp/: config.yaml  figure.py  onerun.py
experiments/common/: instances.py  solvers.py
experiments/concave/: perfprofile.yaml
experiments/configs/: example.yaml  lattice_fitpath.yaml  lattice_solve.yaml  libsvm_fitpath.yaml  libsvm_solve.yaml  mcpquality.yaml  openml_fitpath.yaml  openml_solve.yaml  perfprofile.yaml  regpath.yaml  relaxquality.yaml  screening.yaml  sensibility.yaml  simpruning.yaml  statistics.yaml  synthetic_fitpath.yaml  synthetic_solve.yaml  tightening.yaml
experiments/datasets/: arcene_y.npy  bctcga_y.npy  breast-cancer_A.npy  breast-cancer_y.npy  colon-cancer_A.npy  colon-cancer_y.npy  lattice.npz  leukemia_A.npy  leukemia_y.npy  preprocess.py  riboflavin.npz  riboflavin_A.npy  riboflavin_y.npy
experiments/experimental_mip/: __init__.py  mip.py
experiments/icml/: perfprofile.py  perfprofile.yaml  realworld.py  realworld.yaml  regpath.yaml  statistics.py  statistics.yaml
experiments/microscopy/: exp.npz  exp.py  exp.yml
experiments/mixtures/: exp.py  exp.yml
experiments/perfprofile/: config.yaml  figure.py  onerun.py
experiments/regpath/: config.yaml  exp.py  exp.yml  figure.py  onerun.py
experiments/scripts/: exp.py  oar.py
experiments/synthetic/: exp.py  exp.yml
experiments/utils/: graphics.py  instances.py  solvers.py
html/: .buildinfo  api.html  contribute.html  custom.html  genindex.html  getting_started.html  index.html  ingredients.html  news.html  objects.inv  search.html  searchindex.js
html/_sources/: api.rst.txt  contribute.rst.txt  getting_started.rst.txt  index.rst.txt  news.rst.txt
html/_static/: documentation_options.js
html/api/: api.html  compilation.html  datafit.html  estimator.html  path.html  penalty.html  solver.html  utils.html
html/examples/: custom-datafit.html  custom-estimator.html  custom-penalty.html  examples.html
src/el0ps/: __init__.py  compilation.py  path.py  problem.py  utils.py
tests/: test_datafit.py  test_estimator.py  test_path.py  test_penalty.py  test_problem.py  test_solver.py  utils.py
(+117 files in other folders)
