[project]
name = "el0ps"
version = "0.0.1a2"
description = "An Exact L0-Problem Solver"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [{name = "Théo Guyard", email = "guyard.theo@gmail.com"}]
dependencies = [
    "numpy>=1.22.0",
    "numba>=0.58.1",
    "pyomo>=6.7.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "coverage",
    "flake8",
    "furo",
    "numpydoc",
    "pydoctest",
    "pytest",
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinx_copybutton",
    "sphinx-prompt",
    "twine",
    "wheel",
]
exp = [
    "libsvmdata",
    "l0bnb",
    "l0learn",
    "matplotlib",
    "openml",
    "pandas",
    "pyyaml",
    "skglm",
    "ucimlrepo",
]
mip = ["cplex", "docplex", "gurobipy", "Mosek"]

[project.urls]
"Homepage" = "https://github.com/TheoGuyard/El0ps"
"Bug Reports" = "https://github.com/TheoGuyard/El0ps/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
